Service event à finir

--- a/Tournois_Gamer_BlazorServer/Pages/FetchData.razor
+++ b/Tournois_Gamer_BlazorServer/Pages/FetchData.razor
@@ -1,5 +1,5 @@
 ﻿@page "/fetchdata"
-@    using Tournois_Gamer_BlazorServer.Data
+@using Tournois_Gamer_BlazorServer.Data.WheaterForecast;
 @inject WeatherForecastService ForecastService
 
 <PageTitle>Weather forecast</PageTitle>
