--- a/Tournois_Gamer_BlazorServer/Pages/LyonEsport.razor
+++ b/Tournois_Gamer_BlazorServer/Pages/LyonEsport.razor
@@ -1,15 +1,15 @@
 ﻿@page "/LyonEsport"
-
 @using System.Net.Http.Json
-@using MudBlazor.Examples.Data.Models
-@inject HttpClient httpClient
+@using Tournois_Gamer_BlazorServer.Data;
+@inject EventServices eventServices
+
+<PageTitle>LyonEsport</PageTitle>
 
 <h3>LyonEsport</h3>
 
-
-<MudDataGrid Items="@Elements.Take(4)">
+<MudDataGrid Items="event_.EngagementTermsList.Take(event_.EngagementTermsList.Count())">
     <Columns>
-        <PropertyColumn Property="x => x.Number" Title="Nr" />
+        <PropertyColumn Property="x => x.Platform" Title="Nr" />
         <PropertyColumn Property="x => x.Sign" />
         <PropertyColumn Property="x => x.Name" />
         <PropertyColumn Property="x => x.Position" />
@@ -18,10 +18,10 @@
 </MudDataGrid>
 
 @code {
-    private IEnumerable<Element> Elements = new List<Element>();
+    private Event? event_;
 
     protected override async Task OnInitializedAsync()
     {
-        Elements = await httpClient.GetFromJsonAsync<List<Element>>("webapi/periodictable");
+        event_ = await eventServices.GetEventAsync();
     }
 }
