--- a/Tournois_Gamer_BlazorServer/Shared/NavMenu.razor
+++ b/Tournois_Gamer_BlazorServer/Shared/NavMenu.razor
@@ -30,6 +30,18 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Lyon Esport
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="InscriptionEquipe">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Inscription par Equipe
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="InscriptionIndividuel">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Inscription Individuel
+            </NavLink>
+        </div>
     </nav>
 </div>
 
