--- a/Tournois_Gamer_BlazorServer/Pages/LyonEsport.razor
+++ b/Tournois_Gamer_BlazorServer/Pages/LyonEsport.razor
@@ -53,7 +53,7 @@
 
     public string GetTournamentPlatform(string tournamentName, string platform)
     {
-        if(platform == "PC")
+        if(platform == "PC") //Mettre un tuple pour harmonisé ?
         {
             return tournamentName;
         }
