--- a/Tournois_Gamer_BlazorServer/Shared/MainLayout.razor
+++ b/Tournois_Gamer_BlazorServer/Shared/MainLayout.razor
@@ -3,7 +3,7 @@
 <MudThemeProvider />
 <MudDialogProvider />
 <MudSnackbarProvider />
-<PageTitle>Tournois_Gamer_BlazorServer</PageTitle>
+<PageTitle>LYON E-SPORT</PageTitle>
 
 <div class="page">
     <div class="sidebar">
