Initialisation de la base de données avec Entity framework

--- a/Tournois_Gamer_BlazorServer/Pages/InscriptionIndividual.razor
+++ b/Tournois_Gamer_BlazorServer/Pages/InscriptionIndividual.razor
@@ -70,7 +70,7 @@
         {
             if (tournament.IsTeam is false)
             {
-                tournamentList.Add(tournament.TournamentId, tournament);
+                tournamentList.Add(tournament.Id, tournament);
             }
         }
         inscription.Player = player;
