--- a/Tournois_Gamer_BlazorServer/Pages/InscriptionTeam.razor
+++ b/Tournois_Gamer_BlazorServer/Pages/InscriptionTeam.razor
@@ -21,7 +21,7 @@
 
                 <br />
 
-                    <MudText Typo="Typo.h6" Class="text-decoration-underline">Tournoi choisi : </MudText>
+@*                    <MudText Typo="Typo.h6" Class="text-decoration-underline">Tournoi choisi : </MudText>
                     <div class="d-flex">
                         <MudRadioGroup T="TournamentDto"
                         @bind-Value="inscription.Tournament" For="@(() => inscription.Tournament)" SelectedOptionChanged="CreatePlayers">
@@ -30,7 +30,7 @@
                                 <MudRadio Option="@tournament.Value">@tournament.Value.TournamentName.Name @tournament.Value.Platform</MudRadio>
                             }
                         </MudRadioGroup>
-                    </div>
+                    </div>*@
 
                 <br />
 
